- Added assets - Added menu buttons - Added options - Added scoreboard - Added music - Added Game Over screen & more...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,27 @@ FetchContent_MakeAvailable(SFML)
 add_executable(main src/main.cpp
         src/Word.cpp
         src/Word.h
+        src/Health.cpp
+        src/Health.h
+        src/ScoreManager.cpp
+        src/ScoreManager.h
+        src/Scoreboard.cpp
+        src/Scoreboard.h
+        src/PlayBtn.cpp
+        src/PlayBtn.h
+        src/MenuBackBtn.cpp
+        src/MenuBackBtn.h
+        src/ScoreboardBtn.cpp
+        src/ScoreboardBtn.h
+        src/FontManager.cpp
+        src/FontManager.h
+        src/OptionsBtn.cpp
+        src/OptionsBtn.h
+        src/OptionsManager.cpp
+        src/OptionsManager.h
+        src/Difficulty.h
+        src/DifficultyManager.cpp
+        src/DifficultyManager.h
 )
 target_compile_features(main PRIVATE cxx_std_17)
 target_link_libraries(main PRIVATE SFML::Graphics SFML::Audio)
